--- a/wizard/activate_asset.xml
+++ b/wizard/activate_asset.xml
@@ -5,6 +5,15 @@
             <field name="model">inventory_track.verify_asset_activate</field>
             <field name="arch" type="xml">
                 <form string="Activate  Asset">
+              
+                    <group>
+                        <field name="tag" readonly='1' options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />   
+                        <field name="serial_set" widget="many2many_tags" readonly='1' />  
+                    </group>
+                    <!--<group>
+                    
+                        <field name = "serial"   widget="many2many_tags" options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />
+                    </group> -->
                     <group>
                         <field name="activated_comment"/>   
                     </group>
