--- a/wizard/dispose_asset.xml
+++ b/wizard/dispose_asset.xml
@@ -6,6 +6,16 @@
             <field name="arch" type="xml">
                 <form string="Dispose  Asset">
                     <group>
+                        <field name="asset_type"/>   
+                    </group> 
+                    <group>
+                        <field name="tag" readonly='1' options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />   
+                        <field name="serial_set" widget="many2many_tags" invisible='1' />  
+                    </group>
+                    <group>
+                        <field name = "serial" widget="many2many_tags" options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />
+                    </group> 
+                    <group>
                         <field name="disposal_comment"/>   
                     </group>
                     <group>
