--- a/views/inventory.xml
+++ b/views/inventory.xml
@@ -16,6 +16,8 @@
                     <field name="effective_date" />
                     <field name="waranty_date" />
                     <field name="year" />
+                    <field name="warrant_status" />
+                    
                     <field name="created_on"/> 
                     <field name="created_by"/>   
                        
@@ -75,23 +77,30 @@
                 <form string="Create Inventory Record" create="false" edit="false">
                  <xpath expr="//sheet" position="before">
                     <header> 
-                        <button name="%(wizard_stock_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['stocked','verified','verified_one','diployment','active','repair','disposal'])]}" type="action" string="Stock Asset" class="btn btn-primary"  />
-                        <button name="%(wizard_verify_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','verified','verified_one','diployment','active','repair','disposal'])]}" type="action" string="Verify Asset" class="btn btn-primary"  />
-                        <button name="%(wizard_verify_asset_cyber_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified_one','diployment','active','repair','disposal'])]}" type="action" string="Cyber Verify Asset" class="btn btn-primary"  />
-                        <button name="%(wizard_dispatch_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','diployment','active','repair','disposal'])]}" type="action" string="Deploy Asset" class="btn btn-primary"  />
-                        <button name="%(wizard_verify_asset_activate_location)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','verified_one','active','repair','disposal'])]}" type="action" string="Activate Asset" class="btn btn-primary"  />
-                        <button name="%(wizard_verify_asset_repaire_assets)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','repair','disposal'])]}" type="action" string="Repair Asset" class="btn btn-primary"  />
-                        <button name="%(wizard_verify_asset_dis_assets)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','repair','disposal'])]}" type="action" string="Dispose Asset" class="btn btn-primary"  />
-                        <button name="%(wizard_dispatch_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','diployment','active','verified_one','disposal'])]}" type="action" string="Deploy Asset" class="btn btn-primary"  />
-                        <button name="%(wizard_dispatch_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','repair','disposal'])]}" type="action" string="Relocate" class="btn btn-primary"  />
-                        <button name="%(wizard_verify_asset_dis_assets)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','active','disposal'])]}" type="action" string="Dispose Asset" class="btn btn-primary"  />
+                        <button name="%(wizard_stock_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['stocked','verified','verified_one','diployment','active','repair','disposal'])]}" type="action" string="Stock Asset" class="btn btn-primary"  groups="InventoryTracking.infrastructure_admin"/>
+                        <button name="%(wizard_verify_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','verified','verified_one','diployment','active','repair','disposal','approved','rejected'])]}" type="action" string="Verify Asset" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager"/>
+                        <button name="%(wizard_verify_asset_cyber_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified_one','diployment','active','repair','disposal','approved','rejected'])]}" type="action" string="Cyber Verify Asset" class="btn btn-primary"  groups="InventoryTracking.cyber_admin"/>
+                        <button name="%(wizard_dispatch_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','diployment','active','repair','disposal','approved','rejected'])]}" type="action" string="Deploy Asset" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager,InventoryTracking.infrastructure_admin" />
+                        <button name="%(wizard_reject_asset_manager)d" attrs="{'invisible':[('asset_status' , 'in', ['new','stocked','verified','verified_one','active','repair','disposal','approved'])]} " type="action" string="Reject Deployment" class="btn btn-danger"  groups="InventoryTracking.head_department" />
+                        <button name="%(wizard_approve_asset_manager)d" attrs="{'invisible':[('asset_status' , 'in', ['new','stocked','verified','verified_one','active','repair','disposal','approved'])]} " type="action" string="Approve Deployment" class="btn btn-success"  groups="InventoryTracking.head_department"/>
+                        <!--<button name="%(wizard_verify_asset_activate_location)d" attrs="{'invisible':['|',('asset_status', 'in', ['new','stocked','verified','verified_one','active','repair','disposal']),('current_user', '=', False)]}" type="action" string="Activate Asset" class="btn btn-primary"  />-->
+                        <button name="%(wizard_verify_asset_activate_location)d" attrs="{'invisible':['|',('current_user', '=', False), ('asset_status' , 'in', ['new','stocked','verified','verified_one','active','repair','disposal','rejected'])]} " type="action" string="Activate Asset" class="btn btn-primary"  />
+                        <!--<button name="%(wizard_verify_asset_activate_location)d"    type="action" string="Activate Asset" class="btn btn-primary" attrs="{'invisible':[('current_user', '=', False)]}"   />-->
+                        <button name="%(wizard_verify_asset_repaire_assets)d" attrs="{'invisible':['|',('current_user', '=', False),('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','repair','disposal','approved','rejected'])]}" type="action" string="Repair Asset" class="btn btn-primary"  />
+                        <button name="%(wizard_dispatch_asset_manager)d" attrs="{'invisible':['|',('current_ifra_manager', '=', False),('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','repair','disposal','approved','rejected'])]}" type="action" string="Relocate" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager" />
+                        <button name="%(wizard_verify_asset_dis_assets)d" attrs="{'invisible':['|',('current_ifra_manager', '=', False),('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','repair','disposal','approved','rejected'])]}" type="action" string="Dispose Asset" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager"/>
+                        <button name="%(wizard_dispatch_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','diployment','active','verified_one','disposal','approved','rejected'])]}" type="action" string="Deploy Asset" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager" />
+
+                        <button name="%(wizard_verify_asset_dis_assets)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','active','disposal','approved','rejected'])]}" type="action" string="Dispose Asset" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager"/>
                         
-                        <field name="asset_status" widget="statusbar" statusbar_visible="new,stocked,verified,verified_one,diployment,active,repair,disposal" />
+                        <field name="asset_status" widget="statusbar" statusbar_visible="new,stocked,verified,verified_one,diployment,approved,rejected,active,repair,disposal" />
                     </header>
                 </xpath>
                    <sheet>
                         <group>
                              <separator string="General Asset Details" colspan="2"/>
+                             <field name="current_user"  invisible='1'  />
+                              <field name="current_ifra_manager"  invisible='1'  />
                              <field name = "vendor_id" options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />
                              <field name="asset_type"  />
                              <field name = "make"  options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />
@@ -104,22 +113,23 @@
                              <field name = "year"   />
                              <field name = "effective_date"   />
                              <field name = "waranty_date" style="color: #e60911; font-weight: bold;"  />
+                             <field name = "warrant_status" style="color: #e60911; font-weight: bold;"  />
+                             
                         </group> 
                         <group>
                             <separator string="Additional Information" colspan="2"/>
                             <field name = "file_attach"  />
                             <field name = "comment"  placeholder="description..." />
                         </group> 
+                        <group>
+                            <separator string="Specifications" colspan="2"/>      
+                            <field name = "ram"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]}" />
+                            <field name = "hdd"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]}" />
+                            <field name = "os"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]} " />
+                        </group> 
                         
                          <notebook>
-                                <page string="Specifications">
-                                    <group>
-                                        
-                                        <field name = "ram"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]}" />
-                                        <field name = "hdd"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]}" />
-                                        <field name = "os"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]} " />
-                                    </group> 
-                                </page>   
+                            
                                 <page string="Stocked">
                                     <group>
                                         <field name = "stock_comment" readonly="1" />
@@ -162,6 +172,27 @@
                                         <field name = "disposed_by" readonly="1"  />
                                     </group> 
                                 </page> 
+                                <page string="Activation">
+                                    <group>
+                                        <field name = "activated_comment" readonly="1" />
+                                        <field name = "activated_date" readonly="1"  />
+                                        <field name = "activated_by" readonly="1"  />
+                                    </group> 
+                                </page> 
+                                 <page string="Deployment Approval">
+                                    <group>
+                                        <field name = "approval_comment" readonly="1" />
+                                        <field name = "approval_date" readonly="1"  />
+                                        <field name = "approval_by" readonly="1"  />
+                                    </group> 
+                                </page> 
+                                <page string="Deployment Rejection">
+                                    <group>
+                                        <field name = "reject_comment" readonly="1" />
+                                        <field name = "reject_date" readonly="1"  />
+                                        
+                                    </group> 
+                                </page> 
                           </notebook>  
 
                             <group>
@@ -169,7 +200,10 @@
                             </group> 
                             <group>
                              <field name ="created_by" invisible="1"/>
-                            </group>             
+                            </group>
+                            <group>
+                             <field name ="infr_manager" invisible="1" />
+                            </group>              
                     </sheet> 
                 
                 </form>
