--- a/wizard/reject_asset.xml
+++ b/wizard/reject_asset.xml
@@ -8,7 +8,7 @@
 
                     <group>
                         <field name="tag" readonly='1' options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />   
-                        <field name="serial_set" widget="many2many_tags" readonly='1' />  
+                        <field name="serial_set" readonly='1' />  
                         <field name="location_name" readonly='1' />  
                         
                     </group>
