--- a/views/configs.xml
+++ b/views/configs.xml
@@ -66,6 +66,8 @@
             <field name="model">inventory_track.asset_serial</field>
              <field name="arch" type="xml">
                 <tree string="Serial" decoration-danger="status == 'Innactive'" default_order='serial_date desc'>
+                    
+                    <field name="asset_id" />
                     <field name="serial" />
                     <field name="status" />
                     <field name="serial_date" />
