--- a/wizard/dispose_asset.xml
+++ b/wizard/dispose_asset.xml
@@ -10,10 +10,10 @@
                     </group> 
                     <group>
                         <field name="tag" readonly='1' options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />   
-                        <field name="serial_set" widget="many2many_tags" invisible='1' />  
+                        <field name="serial_set" widget="many2many_tags" />  
                     </group>
                     <group>
-                        <field name = "serial" widget="many2many_tags"   options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />
+                       <field name = "serial" widget="many2many_tags"   />
                     </group> 
                     <group>
                         <field name="disposal_comment"/>   
