--- a/views/inventory.xml
+++ b/views/inventory.xml
@@ -119,6 +119,11 @@
                             <field name = "ram"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]}" />
                             <field name = "hdd"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]}" />
                             <field name = "os"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]} " />
+                            <field name = "Processor"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]} " />
+                            <field name = "bios"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]} " />
+                            <field name = "os_build"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]} " />
+                            <field name = "mac_address"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer'])]} " />
+                            
                         </group> 
                         
                          <notebook>
